style.css
/* GENERAL */

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	scroll-behavior: smooth;
}

body {
	font-family: "Montserrat", sans-serif;
	background-color: #0f1624;
	color: white;
}

a {
	text-decoration: none;
}

img {
	vertical-align: top;
}

header {
	background-color: #0f1624;
}

main {
	display: flex;
	flex-direction: column;
}

/* HEADER */

header .container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 2rem 4rem;
	max-width: 1504px;
	margin: 0 auto;
}

.logo-container {
	background-color: white;
	display: flex;
	align-items: center;
	overflow: hidden;
	border-radius: 5px;
}

.logo {
	width: 2.5rem;
	height: 2.5rem;
	background-image: url(images/pb-logo.svg);
	cursor: pointer;
}

header .container img {
	max-width: 100%;
	margin-right: 0.5rem;
}

header nav {
	display: none;
}

header button {
	background: transparent;
	padding: 1rem;
	border: none;
	cursor: pointer;
}

.nav-list {
	list-style: none;
	display: flex;
	gap: 3vw;
}

.nav-list li {
	display: inline-block;
	font-size: 1rem;
	font-weight: 700;
}

.nav-list a {
	font-family: inherit;
	color: rgb(207, 207, 207);
	transition: 0.5s ease;
}

.nav-list a:hover {
	color: white;
	transition: 0.5s ease;
}

header .media-links {
	display: flex;
	gap: 3rem;
}

header i {
	color: white;
	font-size: 2rem;
	transition: 0.5s ease;
}

header i:hover {
	transform: scale(1.1);
	transition: 0.5s ease;
}

/* GENERAL */

main {
	display: flex;
	flex-direction: column;
}

h2 {
	font-size: 3.5rem;
	margin-bottom: 4rem;
}

.div-container {
	max-width: 1440px;
	align-self: center;
	width: 100%;
	padding: 0 4rem;
}

.divider-primary {
	width: 4.5rem;
	height: 0.5rem;
	background: linear-gradient(90deg, #ae36fe -50%, #04d7d9 150%);
	border-radius: 25px;
	margin: 2rem 0;
}

.divider-secondary {
	width: 4.5rem;
	height: 0.5rem;
	background: linear-gradient(90deg, #985dd0 0%, #e5633c 100%);
	border-radius: 25px;
	margin: 2rem 0;
}

/* HEADER */

header nav {
	display: initial;
}

header button {
	display: none;
}

/* HERO */

.hero-wrapper {
	position: relative;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
	display: flex;
	margin-bottom: 0rem;
}

.hero-text {
	color: #fafafa;
	margin-top: 4rem;
}

.hero-text h1 {
	font-size: 4rem;
	font-weight: 600;
	position: relative;
	z-index: 2;
}

.hero-text p {
	position: relative;
	max-width: 68%;
	margin-top: 2rem;
	line-height: 3rem;
	font-size: 1.8rem;
	z-index: 12;
	color: #c0c0c0;
	margin-bottom: 3rem;
}

.hero-text .cta {
	display: inline-block;
	color: white;
	font-size: 1.5rem;
	font-weight: 400;
	margin-right: 1.5rem;
	padding: 1rem 2rem;
	border-radius: 50px;
	background-color: lightblue;
	background: linear-gradient(90deg, #ae36fe -50%, #04d7d9 150%);
	border: none;
	cursor: pointer;
	transition: 0.5s ease;
	z-index: 90;
}

.hero-text .cta i {
	margin-left: 0.5rem;
}

.hero-text .cta:hover {
	filter: saturate(1.7) brightness(1.2);
	transition: 0.5s ease;
}

.hero-text button:active {
	outline: none;
}

.hero-animation {
	position: absolute;
	top: -1rem;
	right: 0;
	width: 40rem;
	background-color: #0f1624;
	z-index: -1;
}

/* PROJECTS */

.projects-wrapper {
	overflow: hidden;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.cards-wrapper {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
	grid-auto-rows: 1fr;
	/* grid-template-columns: 1fr 1fr; */
	gap: 5rem;
}

.project-card {
	/* padding: 1rem; */
	/* background-color: rgb(112, 112, 231); */

	/* background-color: #0f1624; */
	/* box-shadow: 0 0px 2px rgba(255, 255, 255, 0.5); */
	border-radius: 5px;
	max-width: 616px;
	justify-self: center;
}

.project-image {
	border-radius: 8px;
	height: 19.4rem;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	position: relative;
	/* border: 2px solid white; */
}

.project-image a {
	background-color: #3a3b6e;
	position: absolute;
	color: rgb(255, 255, 255);
	font-weight: 400;
	border-radius: 25px;
	padding: 0.3rem 0.7rem;
	transition: 0.5s ease;
	font-size: 0.8rem;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
}

.project-image a:hover {
	background-color: #53549c;
	transition: 0.5s ease;
}

.live-link {
	top: 1rem;
	right: 1rem;
}

.code-link {
	top: 1rem;
	right: 4.5rem;
}

.image-wrapper img {
	max-width: 100%;
}

.project-info {
	padding: 1.5rem;
	/* display: grid;
		grid-template-columns: 4fr 0.1fr;
		gap: 0 2rem; */
}

.project-info .stack {
	list-style: none;
	margin-bottom: 2rem;
}

.project-info .stack li {
	color: #c0c0c0;
	display: inline-block;
	margin-right: 2rem;
}

.project-title {
	font-size: 2rem;
}

.project-description {
	grid-column: 1;
	margin: 1rem 0;
	line-height: 1.5rem;
}

.feature-list li {
	margin-left: 2rem;
}

.tech-used {
	grid-column: 2;
	grid-row: 1 / span 2;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin-bottom: 1rem;

	font-size: 2rem;
	text-align: center;
}

/* TECHNOLOGIES */
.tech-wrapper {
	position: relative;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.tech-wrapper h2 {
	margin-bottom: 2rem;
}

.tech-wrapper > p {
	font-size: 1.5rem;
	max-width: 60%;
	color: #878b92;
	line-height: 2.5rem;
}

.tech-cards-wrapper {
	margin-top: 4rem;
	display: flex;
	justify-content: space-between;
	max-width: 95%;
}

.tech-card p {
	font-size: 1rem;
	color: #c0c0c0;
	max-width: 70%;
}

.tech-card i {
	display: inline-block;
	margin-left: 0.1rem;
	font-size: 2rem;
	margin-right: 1rem;
}

.tech-card h3 {
	display: inline-block;

	font-size: 2rem;
	margin-top: 0.5rem;
	margin-bottom: 1rem;
}

/* ABOUT ME */
.about-wrapper {
	position: relative;
	padding: 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.about-wrapper h2 {
	margin-bottom: 2rem;
}

.about-wrapper > p {
	font-size: 1.5rem;
	max-width: 60%;
	color: #878b92;
	line-height: 2.5rem;
}

.timeline-wrapper {
	margin-top: 4rem;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
	grid-auto-rows: 1fr;
	/* grid-template-columns: 1fr 1fr; */
	gap: 5rem;
}

.timeline-card {
	position: relative;
}

.timeline-card img {
	top: 0;
	margin-left: 2rem;
	position: absolute;
	display: inline-block;
}

.timeline-card i {
	top: 0;
	right: 0rem;
	position: absolute;
	display: inline-block;
	margin-left: 0.1rem;
	font-size: 1.2rem;
}

.timeline-card h3 {
	display: inline-block;

	font-size: 1.5rem;
	margin-top: 0.5rem;
	margin-bottom: 1rem;
}

.timeline-card p {
	font-size: 0.8rem;
	color: #cecece;
	font-weight: 400;
	max-width: 80%;
}

/* FOOTER */
footer {
	border-top: 1px solid rgba(255, 255, 255, 0.1);
	margin-top: 5rem;
}

.footer-wrapper {
	position: relative;
	padding: 2rem 4rem 1rem 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.contact-info {
	display: grid;
	grid-template-columns: 1fr 1fr;
	margin-bottom: 2rem;
}

.contact-info h4 {
	grid-row: 1;
	margin-bottom: 1rem;
	color: #878b92;
	font-size: 0.8rem;
}

.contact-info *:not(h4) {
	grid-row: 2;
	color: #d1d1d1;
}

.bottom {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.bottom p {
	color: #878b92;
	font-weight: 700;
	align-self: flex-end;
	font-size: 0.7rem;
}

.footer-wrapper i {
	margin-left: 1rem;
	color: white;
	font-size: 2rem;
	transition: 0.5s ease;
	font-size: 1.2rem;
}

.footer-wrapper i:hover {
	transform: scale(1.1);
	transition: 0.5s ease;
}

